--- a/index.html
+++ b/index.html
@@ -187,7 +187,10 @@
             
           </div>
           <hr>
-          <div id="map"></div>
+          <section id="mapid">
+            <div id="map"></div>
+          </section>
+          
 
         </div>
 
